# Intelligent-PDF-Extraction-System

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: benchmark_mineru_vlm_probe_4pages.yaml  benchmark_paper_10pages.yaml  benchmark_paper_278pages.yaml  benchmark_paper_50pages.yaml  benchmark_quick_fullfile.yaml  benchmark_quick_page1.yaml  benchmark_set.yaml  benchmark_smoke.yaml  benchmark_type20_mixed_layout.yaml  benchmark_type20_table_heavy.yaml  benchmark_type20_text_heavy.yaml  benchmark_type_form_template.yaml  benchmark_type_mixed_layout.yaml  benchmark_type_table_heavy.yaml  benchmark_type_text_heavy.yaml  benchmark_type_toc_list.yaml  mineru_fast_upgrade_v2.yaml  mineru_stamp_page_only.yaml
configs/: engines.yaml  engines_benchmark_mineru27_hybrid.yaml  engines_benchmark_mineru27_pipeline.yaml  engines_benchmark_mineru31_hybrid.yaml  engines_benchmark_mineru31_pipeline.yaml  engines_cascade.yaml  engines_fair_speed.yaml  engines_mineru_vlm_auto_probe.yaml  engines_prod.yaml  engines_prod_repair.yaml  engines_prod_vlm_repair.yaml  engines_track_a_vlm.yaml  engines_track_b_lightweight.yaml  page_type_manifest.yaml  quality_floor.yaml
docker/: Dockerfile.mineru  Dockerfile.mineru31  Dockerfile.paddle  compose.yaml
docs/: backend_api.md  data_and_benchmarks.md  demo_reliability_note.md  product_dev_run.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: build_prod_ground_truth_check.py  build_prod_table_audit.py  build_table_audit_pack.py  run_prod_pipeline.ps1  (+2 more)
(+51 files in other folders)
