[project]
name = "pdf-extraction-agent-system"
version = "0.1.0"
description = "Local multi-agent PDF extraction system with benchmark-driven engine selection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.6.7",
  "pydantic>=2.11.9",
  "pyyaml>=6.0.2",
  "jsonschema>=4.25.1",
  "pypdf>=5.6.0",
  "pypdfium2>=4.30.0",
  "Pillow>=11.3.0",
  "numpy>=2.3.3",
  "typer>=0.19.2",
  "rich>=14.1.0",
  "orjson>=3.11.3",
  "psutil>=7.1.0",
  "httpx>=0.28.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.13.0",
  "mypy>=1.18.2"
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
